# project1-nlp

./: README.md  pyproject.toml
notebooks/: jupyter-labs-spacex-data-collection-api-v2.ipynb  jupyter-labs-webscraping.ipynb  labs-jupyter-spacex-Data wrangling-v2.ipynb
src/coursera_ds_capstone/: __init__.py  cli.py
tests/: test_smoke.py
