[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "coursera-ds-capstone"
version = "0.1.0"
description = "Python package scaffold for a UV-managed project."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"beautifulsoup4>=4.12",
	"ipykernel>=7.0",
	"numpy>=2.0",
	"pandas>=2.2",
	"requests>=2.31",
]

[project.scripts]
coursera-ds-capstone = "coursera_ds_capstone.cli:main"

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.5"]

[tool.hatch.build.targets.wheel]
packages = ["src/coursera_ds_capstone"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
